# dara

./: .gitignore  CONTRIBUTING.md  MODEL_CARD.md  README.md  README_ID.md  app.py  config.py  dataset.py  model.py  publish_to_hub.py  pyproject.toml  requirements.txt  test_dara.py  train.py  verify_data.py  verify_id.py
.agent/workflows/: demo-walkthrough.md
dara_checkpoints/: emissions.csv
dara_checkpoints/checkpoint-5/: README.md  adapter_config.json  adapter_model.safetensors  rng_state.pth  trainer_state.json
dara_checkpoints/runs/Nov30_18-01-28_ARDELYO/: events.out.tfevents.1764500499.ARDELYO.3424.0
dara_checkpoints/runs/Nov30_18-05-04_ARDELYO/: events.out.tfevents.1764500721.ARDELYO.5392.0
dara_checkpoints/runs/Nov30_18-09-37_ARDELYO/: events.out.tfevents.1764500988.ARDELYO.8404.0
dara_checkpoints/runs/Nov30_18-17-16_ARDELYO/: events.out.tfevents.1764501444.ARDELYO.11204.0
data/eval/: dataset.json
data/train/: dataset.json
demo/: app.py
docs/: API.md  ARCHITECTURE.md  CONTEXT.md  QUICKSTART.md  RESEARCH.md  STATISTICS.md  TRAINING.md  VIDEO_SCRIPT.md
scripts/: benchmark.py  publish_to_hub.py  train.py  verify_app.py  verify_id.py
src/dara/: __init__.py  config.py  dataset.py  model.py
src/dara/core/: __init__.py  inference.py  model.py  processor.py
src/dara/modes/: __init__.py  base.py  currency.py  emotion.py  medicine.py  scene.py  text.py
src/dara/services/: __init__.py  cache.py  translation.py  tts.py
src/dara/utils/: __init__.py  image.py  logging.py  text.py
tests/: test_dara.py
